--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-     <!-- tailwind cdn -->
-     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- tailwind cdn -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>React App</title>
+    <title>Boys Hostel | GCET Jammu</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
